--- a/scenario1.html
+++ b/scenario1.html
@@ -1,29 +1,37 @@
-
-        <html>
-            <head>
-                <title>Scénario 1 - Dilemme du Tramway</title>
-                <style>
-                    body { font-family: Arial, sans-serif; text-align: center; background-color: #f4f4f4; margin-top: 50px;}
-                    h1 { color: #333; }
-                    .scenario { background-color: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
-                    button { margin: 10px; padding: 10px 20px; font-size: 18px; cursor: pointer; background-color: #4CAF50; color: white; border: none; border-radius: 5px; }
-                    button:hover { background-color: #45a049; }
-                </style>
-            </head>
-            <body>
-                <h1>Scénario 1</h1>
-                <div class="scenario">
-                    <p>Une situation similaire au dilemme classique du tramway. Vous devez choisir entre sauver cinq personnes ou une seule.</p>
-                    <button onclick="choose('sauver_cinq')">Sauver les cinq personnes</button>
-                    <button onclick="choose('sauver_un')">Sauver une personne</button>
-                </div>
-                <script>
-                    function choose(choice) {
-                        const userChoice = choice;
-                        alert('Votre choix: ' + (userChoice === 'sauver_cinq' ? 'Sauver les cinq personnes' : 'Sauver une personne'));
-                        // Code pour gérer le stockage de la réponse et afficher les pourcentages
-                    }
-                </script>
-            </body>
-        </html>
-    
+<!DOCTYPE html>
+<html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Scénario 1 - Le classique</title>
+    <link rel="stylesheet" href="scenarios.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Scénario 1 : Le classique</h1>
+    </header>
+    <main>
+      <section class="scenario-content">
+        <p>
+          Un tramway se dirige vers cinq personnes attachées à la voie. Vous
+          pouvez le détourner vers une autre voie, où une seule personne est
+          attachée. Que faites-vous ?
+        </p>
+        <button onclick="choose('détourner')">
+          Détourner le tramway (sauver 5, sacrifier 1)
+        </button>
+        <button onclick="choose('rien')">
+          Ne rien faire (laisser les 5 mourir)
+        </button>
+      </section>
+    </main>
+    <script>
+      function choose(choice) {
+        alert(
+          "Votre choix : " +
+            (choice === "détourner" ? "Détourner le tramway" : "Ne rien faire")
+        );
+      }
+    </script>
+  </body>
+</html>
