--- a/scenario2.html
+++ b/scenario2.html
@@ -16,8 +16,10 @@
           Vous pouvez sauver un enfant ou trois adultes, mais vous ne connaissez
           pas les conséquences à long terme. Que décidez-vous ?
         </p>
-        <button onclick="recordChoice('enfant')">Sauver l'enfant</button>
-        <button onclick="recordChoice('adultes')">Sauver les adultes</button>
+        <div class="button-container">
+          <button onclick="recordChoice('enfant')">Sauver l'enfant</button>
+          <button onclick="recordChoice('adultes')">Sauver les adultes</button>
+        </div>
         <div id="stats"></div>
       </section>
       <a href="index.html" class="back-link">Retour à l'accueil</a>
