--- a/scenario3.html
+++ b/scenario3.html
@@ -17,8 +17,10 @@
           sur chacune des voies. Faites un choix sans informations
           supplémentaires.
         </p>
-        <button onclick="recordChoice('changer')">Changer de voie</button>
-        <button onclick="recordChoice('rien')">Ne rien faire</button>
+        <div class="button-container">
+          <button onclick="recordChoice('changer')">Changer de voie</button>
+          <button onclick="recordChoice('rien')">Ne rien faire</button>
+        </div>
         <div id="stats"></div>
       </section>
       <a href="index.html" class="back-link">Retour à l'accueil</a>
