--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
       <h1>Bienvenue au Dilemme du Tramway</h1>
       <p>
         Explorez plusieurs scénarios, prenez des décisions difficiles, et voyez
-        les conséquences !
+        les conséquences ! Le dilemme ou problème du tramway (trolley problem en
+        anglais) est une expérience de pensée qui se conçoit ainsi sous une
+        forme générale : une personne peut effectuer un geste qui bénéficiera à
+        un groupe de personnes A, mais, ce faisant, nuira à une personne B ;
+        dans ces circonstances, est-il moral pour la personne d'effectuer ce
+        geste ? L'expérience, utilisée en éthique, en sciences cognitives et en
+        neuroéthique, a été décrite pour la première fois par Philippa Foot en
+        1967 et analysée en profondeur par Judith Jarvis Thomson, Peter Unger4
+        et Frances Kamm (en)
       </p>
     </header>
     <main>
