--- a/scenario2.html
+++ b/scenario2.html
@@ -21,6 +21,7 @@
           <button onclick="recordChoice('adultes')">Sauver les adultes</button>
         </div>
         <div id="stats"></div>
+        <div id="ai-decision" class="ai-section"></div>
       </section>
       <a href="index.html" class="back-link">Retour à l'accueil</a>
     </main>
