--- a/scenario1.html
+++ b/scenario1.html
@@ -26,6 +26,7 @@
           </button>
         </div>
         <div id="stats"></div>
+        <div id="ai-decision" class="ai-section"></div>
       </section>
       <a href="index.html" class="back-link">Retour à l'accueil</a>
     </main>
