--- a/scenario3.html
+++ b/scenario3.html
@@ -22,6 +22,7 @@
           <button onclick="recordChoice('rien')">Ne rien faire</button>
         </div>
         <div id="stats"></div>
+        <div id="ai-decision" class="ai-section"></div>
       </section>
       <a href="index.html" class="back-link">Retour à l'accueil</a>
     </main>
