--- a/scenario3.html
+++ b/scenario3.html
@@ -19,9 +19,8 @@
         </p>
         <div class="button-container">
           <button onclick="recordChoice('changer')">Changer de voie</button>
-          <button onclick="recordChoice('rien')">Ne rien faire</button>
+          <button onclick="recordChoice('rien2')">Ne rien faire</button>
         </div>
-        <div id="stats"></div>
         <div id="ai-decision" class="ai-section"></div>
       </section>
       <a href="index.html" class="back-link">Retour à l'accueil</a>
