--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         geste ? L'expérience, utilisée en éthique, en sciences cognitives et en
         neuroéthique, a été décrite pour la première fois par Philippa Foot en
         1967 et analysée en profondeur par Judith Jarvis Thomson, Peter Unger4
-        et Frances Kamm (en)
+        et Frances Kamm.
       </p>
     </header>
     <main>
